fix browserID button alignment

--- a/sass/sections/_login.sass
+++ b/sass/sections/_login.sass
@@ -85,4 +85,5 @@ body.login
   display: inline-block
   margin: 0 $xxxsmallem
   width: image-width('browserid.png')
+  vertical-align: top
 
